# spectorr_pipeline

./: .flake8  .gitignore  .pre-commit-config.yaml  Makefile  pyproject.toml
src/spectorr_pipeline/: cli.py  e2e.py  etl.py  mockgen.py
src/spectorr_pipeline/insights/: aggregator.py  prompt_templates.py
src/spectorr_pipeline/io/: paths.py  readers.py  writers.py
src/spectorr_pipeline/llm/: anthropic_adapter.py
tests/: test_etl.py
